2006-01-11  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter_system.c, docs/C/gdm.xml: Use
	  "Shut Down" instead of "Shut down" or "shut down".

2006-01-11  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c, docs/C/gdm.xml, gui/greeter/greeter_parser.c:: Rename
	  "shutdown" to "shut down" or "halt" and rename "capslock" to 
	  "Caps Lock" since these are the recommended wordings suggested by
	  Calum Benson.  Also corrected a few errors in the stock labels.

2006-01-11  Brian Cameron  <brian.cameron@sun.com>

	* daemon/errorgui.c:  Now use GDK_DISPLAY_XDISPLAY instead of
	  GDK_DISPLAY since the GDK_DISPLAY macro causes the GDM daemon to
	  require the gdk_display extern global variable from the libgdk-x11
	  library and always causes this library to get loaded into memory even
	  though normally the GDM daemon does not make calls to GDK.  Using
	  GDK_DISPLAY_XDISPLAY makes lazy loading work better.  Thanks to 
	  Padraig O'Briain for noticing this issue.

2006-01-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmsetup.c: (theme_list_equal_func): New function.
	(setup_local_themed_settings), (setup_remote_themed_settings):
	Group the preview and markup into one column.  Sort list
	and setup a GTK+ TreeView search function.
	* gui/gdmsetup.glade:  Fix a few broken mnemonics.  Enable 
	GTK+ TreeView searches. 

2006-01-09  Brian Cameron  <brian.cameron@sun.com>

	* config/locale.alias:  Correct spelling of "Esperanto".
	  Fixes bug #326350.  Patch provided by Saleem Abdulrasool
	  <compnerd@gentoo.org>.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Added "Performance" section to discuss 
	  the --with-prefetch option.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am:  Make the Makefile.am file a bit smarter.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Make error message more clear when session file