@@ -5664,7 +5664,7 @@ homogeneous=&quot;bool&quot;&gt;
           <filename>cancel</filename>, _(&quot;_Cancel&quot;
         </para>
         <para>
-          <filename>caps-lock-warning</filename>, _(&quot;Please make sure the Caps Lock key is not enabled.&quot; 
+          <filename>caps-lock-warning</filename>, _(&quot;Caps Lock key is on.&quot; 
         </para>
         <para>
           <filename>chooser</filename>, _(&quot;_XDMCP Chooser&quot;
