@@ -1,5 +1,13 @@
 2006-01-11  Brian Cameron  <brian.cameron@sun.com>
 
+	* daemon/verify-crypt.c, daemon/verify-pam.c, daemon/verify-shadow.c,
+	  docs/C/gdm.xml, gui/greeter/greeter_parser.c:  Change the
+	  "Please make sure the Caps Lock key is not enabled." message to
+	  the more informational "Caps Lock is on.".  Some users may want to
+	  use Caps Lock when logging in.
+
+2006-01-11  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmlogin.c, gui/greeter/greeter_system.c, docs/C/gdm.xml: Use
 	  "Shut Down" instead of "Shut down" or "shut down".
 
